Always consider autohide panels in the edit mode zoom

introduce a new property strictAvailableScreenRect which is the
available screen rect, always excluding the panel geometries,
*also autohide panels* This is used only by edit mode zoom,
while everything else still uses availableScreenRect.
This is necessary as before when going in edit mode the
autohide panels were considered, so the available space
on desktop layout changed on the fly when going in edit mode,
making impossible to properly configure desktop widgets when an
autohide panel is present

depends from https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2525

BUG:493143